  .settings.xml, but beware that there is no redo implementation yet
- projectModel: added name check before adding a new assetType
- projectModel: added again the extension checking for the files returned from
  the sequence.getAllAssetFileNamesForType method
- assetModel: silly codes removed from assetType class
- assetUpdater: the texts aligned to verticall center also

v9.12.28
- the CachedMethod and the InputBasedCachedMethod objects now returns more
  meaningfull represantation of the cached methods

v9.12.27
- the database class is renamed to repository to more correctly reflect the
  current design
- the repository class moved to repositoryModel.py under dataModels
- the databaseData node in the .settings.xml for every sequence is removed and
  the attributes are moved to the sequenceData node

v9.12.26
- mayaEnv: the return type of the open method has been changed from list of
  asset file names to list of asset objects to have a more solid structure
- the environments are turned into classes from bare functions, and they are
  derived from the abstractClasses.Environment class
- the abstractClasses script is moved from tools to dataModels, which is more
  meaningful
- assetManager: the assetManager ui is updated to use the new environment
  classes and the assetUpdater
- the basic functions of the assetUpdater is written, but it causes the
  assetManager to crash

v9.12.25
- projectModel: added getAssetBaseNamesForType for the sequence object
- assetUpdater: started developing of the assetUpdater UI

v9.12.24
- projectModel: the getAllAssetFileNamesForType method in sequence object was
  returning full paths instead of file names, it is fixed now
- projectModel: added Shot class to manage shot data
- projectModel: the Sequence class is now using Shot objects instead of
  shotList. The settings file is updated by the sequence class instance while
  reading the settings file, if the current sequence that the object is tied to