@@ -83,6 +83,13 @@
         </spacer>
        </item>
        <item>
+        <widget class="QPushButton" name="selectNone_pushButton">
+         <property name="text">
+          <string>Select None</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="selectAll_pushButton">
          <property name="text">
           <string>Select All</string>
