@@ -8,6 +8,8 @@ v9.12.29
   the sequence.getAllAssetFileNamesForType method
 - assetModel: silly codes removed from assetType class
 - assetUpdater: the texts aligned to verticall center also
+- assetUpdater: selectAll push button now works
+- assetUpdater: added selectNone button
 
 v9.12.28
 - the CachedMethod and the InputBasedCachedMethod objects now returns more
